add a todo and web-resources.mdx

--- a/packages/site/astro-test/src/collections/blog/en/todo.mdx
+++ b/packages/site/astro-test/src/collections/blog/en/todo.mdx
@@ -12,6 +12,8 @@ tags:
 
 * Search doesn't work.
 
+* Search page's layout is completely broken.
+
 * Searchbar is bigger than viewport on mobile.
 
 * "-> en" and "-> zh" need to be better styled.
