--- a/packages/site/astro-test/src/collections/blog/en/black-and-white.mdx
+++ b/packages/site/astro-test/src/collections/blog/en/black-and-white.mdx
@@ -10,4 +10,4 @@ tags:
 
 ## Black and white tree
 
-![Tree in Winter, without any leaves](/winter-tree.jpg)
+![Tree in Winter, without any leaves](../winter-tree.jpg)
