--- a/packages/site/astro-test/src/collections/blog/en/glass-photos.mdx
+++ b/packages/site/astro-test/src/collections/blog/en/glass-photos.mdx
@@ -9,6 +9,6 @@ tags:
 
 ## On a table
 
-![Glass pyramid on top of glass cube, with a light shining behind and through them.](/glass-house.jpg)
+![Glass pyramid on top of glass cube, with a light shining behind and through them.](../glass-house.jpg)
 
-![Three glass shapes casting a rainbow behind them.](/glass-collection.jpg)
+![Three glass shapes casting a rainbow behind them.](../glass-collection.jpg)
