--- a/packages/site/astro-test/src/collections/blog/en/pattern-photos.mdx
+++ b/packages/site/astro-test/src/collections/blog/en/pattern-photos.mdx
@@ -10,6 +10,6 @@ tags:
 
 ## Slinky
 
-![Slinky with both sides down, forming a nice pattern to the camera](/slinky.jpg)
+![Slinky with both sides down, forming a nice pattern to the camera](../slinky.jpg)
 
 I just really like how the lines intersect with each other visually!
