--- a/packages/site/astro-test/src/collections/blog/en/wolf-icons.mdx
+++ b/packages/site/astro-test/src/collections/blog/en/wolf-icons.mdx
@@ -11,10 +11,10 @@ tags:
 
 ## Wolves
 
-![unassuming wolf in black and white](/wolf-s.png)
+![unassuming wolf in black and white](../wolf-s.png)
 
-![scary-looking wolf in forest](/wolf-m.png)
+![scary-looking wolf in forest](../wolf-m.png)
 
 Original image I imitated is from book [Picture This: How Pictures Work](https://www.goodreads.com/book/show/31126390-picture-this).
 
-![hand petting the same wolf](/wolf-l.png)
+![hand petting the same wolf](../wolf-l.png)
