feat(style): add new Vale styles for Microsoft and proselint
Adds a comprehensive set of new Vale styles, including:
- Microsoft style guide rules for grammar, punctuation, and word choice.
- Proselint rules for common writing issues like cliches, jargon, and gender bias.
- Write-good rules for conciseness and active voice.

These new styles will help enforce consistent and high-quality writing across the project's documentation and other text-based assets.

refactor(eslint): update unicorn/prevent-abbreviations rule
refactor(module): update ensuring function unit tests to use direct references
chore: add empty .vale.ini file

--- a/packages/site/astro-test/src/collections/blog/en/design-file.mdx
+++ b/packages/site/astro-test/src/collections/blog/en/design-file.mdx
@@ -10,10 +10,12 @@ tags:
 
 ## The design file
 
-https://www.figma.com/design/OGK2sZvJFuPIYDSqUPmWJq/aquati.cat?node-id=0-1&t=ciYLA06JdiSO4xSE-1
+[](https://www.figma.com/design/OGK2sZvJFuPIYDSqUPmWJq/aquati.cat?node-id=0-1&t=ciYLA06JdiSO4xSE-1)
 
-{/* Write about why I failed to implement the website strictly to the spec. */}
+{/* vale Microsoft.FirstPerson = NO */}
+Write about why I failed to implement the website strictly to the spec.
+{/* vale Microsoft.FirstPerson = YES */}
 
-{/* Write about why being one to one from design to code might not be achievable. */}
+Write about why being one to one from design to code might not be achievable.
 
-{/* Write about why being one to one from design to code might be harmful. */}
+Write about why being one to one from design to code might be harmful.
