--- a/packages/site/astro-test/src/collections/blog/en/magicbread.mdx
+++ b/packages/site/astro-test/src/collections/blog/en/magicbread.mdx
@@ -22,9 +22,9 @@ intended scale is essential. Alysha explained the bakery is an in-
 dependent small business designed to create a down-to-earth en-
 vironment for the customers.
 
-* It will not expand.
-* It will not open other stores.
-* It will not be changed hands.
+* It won't expand.
+* It won't open other stores.
+* It won't be changed hands.
 
 The .ca top level domain name indicates a service is operated in
 Canada or is serving Canada customers. “.com”, on the other hand,
@@ -69,7 +69,7 @@ Now that the name is settled down, we need to:
 Which details of the idea do we need to refine further before
 starting the design process?
 
-Obviously, one of the most important things to figure out is how
+One of the most important things to figure out is how
 we differ from the competitors.
 To do this, we need to research existing bakeries.
 To find existing bakeries, we need to both search locally and Goo-
@@ -91,7 +91,7 @@ bakery.
 On Google, we found many bakeries. Here are some examples:
 
 1. Baklawa King https://g.co/kgs/b78JSyY, which has stores open
-in multiple places. This is not necessarily a bad thing, but when
+in multiple places. This isn't necessarily a bad thing, but when
 businesses grow bigger, especially when they become something
 like a chain and open in multiple places, even when the original
 management wants to keep it down-to-earth, their attempts often
@@ -117,14 +117,14 @@ placed MagicBread.ca at a unique and attractive position.
 happy, by using large panes of glass and wooden dining chairs.
 
 2. Cook creative, original pastries and arrange them in a unique
-fashion to show the customers we are “Magical”.
+fashion to show the customers we're "Magical".
 
 3. Use professional skills to conjure attractive photography of
 both the store and the pastries. Post on Google Maps to reduce
 barriers with potential customers.
 
 4. Stick to the “down-to-earth” value. Focus on the only location.
-Do not open other stores. This would ensure we’re able to care for
+Don't open other stores. This would ensure we're able to care for
 individual customers and make everyone feel welcomed.
 
 5. Never place money before customers. Ensure the prices would
