--- a/packages/site/astro-test/src/collections/blog/en/pattern-photos.mdx
+++ b/packages/site/astro-test/src/collections/blog/en/pattern-photos.mdx
@@ -8,8 +8,12 @@ tags:
   - "pattern"
 ---
 
+{/* vale Microsoft.FirstPerson = NO */}
+
 ## Slinky
 
 ![Slinky with both sides down, forming a nice pattern to the camera](../slinky.jpg)
 
+{/* vale Microsoft.FirstPerson = NO */}
 I just really like how the lines intersect with each other visually!
+{/* vale Microsoft.FirstPerson = YES */}
