--- a/packages/site/astro-test/src/collections/blog/en/web-resources.mdx
+++ b/packages/site/astro-test/src/collections/blog/en/web-resources.mdx
@@ -25,7 +25,9 @@ Companion website: [The Elements of Typographic Style Applied to the Web](https:
 
 [You Don’t Know JS](https://github.com/getify/You-Dont-Know-JS)
 
-## Functional-Light JavaScript (Book free oss) - Not essential, but I highly recommend reading it at least once, just to get an idea what functional programming is.
+{/* vale Microsoft.FirstPerson = NO */}
+## Functional-Light JavaScript (Book free oss) - Not essential, but I highly recommend reading it at least once, just to get an idea what functional programming is
+{/* vale Microsoft.FirstPerson = YES */}
 
 [Functional-Light JavaScript](https://github.com/getify/Functional-Light-JS)
 
@@ -45,7 +47,7 @@ Companion website: [The Elements of Typographic Style Applied to the Web](https:
 
 [Figma | Youtube](https://www.youtube.com/@Figma/playlists)
 
-## Heydon Pickering (personal website of a great frontend dev) - Recommend checking out and subscribing to.
+## Heydon Pickering (personal website of a great frontend dev) - Recommend checking out and subscribing to
 
 [HeydonWorks](https://heydonworks.com/)
 
