--- a/packages/site/astro-test/src/collections/blog/en/wolf-icons.mdx
+++ b/packages/site/astro-test/src/collections/blog/en/wolf-icons.mdx
@@ -15,6 +15,8 @@ tags:
 
 ![scary-looking wolf in forest](../wolf-m.png)
 
+{/* vale Microsoft.FirstPerson = NO */}
 Original image I imitated is from book [Picture This: How Pictures Work](https://www.goodreads.com/book/show/31126390-picture-this).
+{/* vale Microsoft.FirstPerson = YES */}
 
 ![hand petting the same wolf](../wolf-l.png)
